XX-Improved german localization pages Patch provided by IANT GmbH - Thanks!

--- a/sipxpbx/WEB-INF/LoginPage_de.properties
+++ b/sipxpbx/WEB-INF/LoginPage_de.properties
@@ -5,3 +5,6 @@ label.password=PIN
 label.userName=Benutzer ID
 message.loginError=Die angegebene Benutzer ID und PIN Kombination ist unbekannt. Versuchen Sie es bitte noch einmal..
 login.prompt=Bitte geben Sie Benutzer ID und PIN-Nummer ein.
+login.title=Willkommen bei SipXecs
+loginHeader=Anmelden
+browser.unsupported=Achtung\!</br> Ihr verwendeter Brauser wird nicht unterst\u00FCtzt. Falls sie fortfahren k\u00F6nnen Anzeigefehler auftreten bzw. manche Funktionen nicht richtig ausgef\u00FChrt werden. Es wird empfohlen den den Internet Explorer Version 7 oder 8, Firefox oder Google Chrome zu verwenden.
