--- a/sipxpbx/WEB-INF/acd/AcdAgentPresencePanel_de.properties
+++ b/sipxpbx/WEB-INF/acd/AcdAgentPresencePanel_de.properties
@@ -5,3 +5,6 @@ presence.closed=Abgemeldet
 presence.na=Nicht verf\u00FCgbar
 signIn=Anmelden
 signOut=Abmelden
+noServersFound.error=Kein ACD Server verf\u00FCgbar
+title=Agenten-Pr\u00E4senz
+label.selectServer=ACD Server ausw\u00E4hlen\:
