--- a/sipxpbx/WEB-INF/acd/AcdHistoryPage_de.properties
+++ b/sipxpbx/WEB-INF/acd/AcdHistoryPage_de.properties
@@ -63,3 +63,7 @@ agentDetailReport.from_uri=Anrufer
 
 historicialStatsDisabled=ACD historische Reports sind nicht verf\u00FCgbar. Bitte konsultieren Sie das Handbuch f\u00FCr weitere Information wie diese Funktion installiert werden kann.
 link.export=Exportieren
+
+message.invalidDates=Das Enddatum darf nicht vor dem Startdatum liegen.
+label.selectServer=ACD Server
+acdMissing=Kein Report verf\u00FCgbar (ACD wurde keiner Umgebung zugewiesen)
