--- a/sipxpbx/WEB-INF/acd/AcdPresenceServer_de.properties
+++ b/sipxpbx/WEB-INF/acd/AcdPresenceServer_de.properties
@@ -1,1 +1,2 @@
 title=ACDagenten-Pr\u00E4senzdienst
+quick.help=Agents m\u00FCssen angemeldet sein, um anrufe entgegen nehmen zu k\u00F6nnen.<br/>Agents k\u00F6nnen automatisch abgemeldet werden, wenn sie ein Gespr\u00E4ch beenden.<br/>Agents k\u00F6nnen sich über ihr Benutzerportal an- und abmelden.
