--- a/sipxpbx/WEB-INF/acd/AcdServerPage_de.properties
+++ b/sipxpbx/WEB-INF/acd/AcdServerPage_de.properties
@@ -12,4 +12,4 @@ tab.queuesStats=Warteschlangestatistik
 
 quick.help=Konfigurations\u00E4nderungen \
  werden erst aktiv, wenn sie aktiviert werden. Selektieren Sie den Server und dr\u00FCcken Sie "Aktivieren" auf der Uebersichtsseite.
-
+crumb.editSipxService=Dienst bearbeiten
