--- a/sipxpbx/WEB-INF/acd/EditAcdLine_de.properties
+++ b/sipxpbx/WEB-INF/acd/EditAcdLine_de.properties
@@ -2,3 +2,4 @@ title=ACD Amtsleitung
 label.queue=Warteschlange
 description.queue=Die Amtsleitung ist dieser Warteschlange zugeordnet. Auf dieser Leitung einkommende Anrufe werden von dieser \
  Warteschlange behandelt.
+description.did=Weiterer Alias f\u00FCr die Amtsleitung
