--- a/sipxpbx/WEB-INF/admin/commserver/ServicesTable_de.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/ServicesTable_de.properties
@@ -14,7 +14,7 @@ label.locations = Servername
 
 serviceName = Name
 
-quick.help=Warnung: Das Stoppen oder Neustarten von Diensten hat einen Diensteausfall zur Folge. Ben\u00FCtzen Sie diese Funktion nur, falls \
+quick.help=Warnung: Das Stoppen oder Neustarten von Diensten hat einen Diensteausfall zur Folge. Benutzen Sie diese Funktion nur, falls \
            Sie Grund zu der Annahme haben, dass das System nicht mehr richtig funktioniert und deshalb neu gestarted werden muss.
 
 status = Status
@@ -26,3 +26,11 @@ status.Stopped  = Angehalten
 status.Unknown  = Unbekannt
 
 title = Dienstestatus
+
+statusMessage.version.mismatch=Softwareversion unpassend
+button.reload=Neu laden
+xml.rpc.error.state=Dienststatus nicht empfangbar von Host\: {0}
+xml.rpc.error.status.messages=Meldung f\u00FCr Dienststatus nicht empfangbar von Host\: {0}
+prompt.addNewSipxService=Neuen sipX Dienst hinzuf\u00FCgen
+statusMessage.resource.missing=Fehlende Abh\u00E4ngigkeit
+role=Funktion
