--- a/sipxpbx/WEB-INF/cdr/ActiveCallsPanel_de.properties
+++ b/sipxpbx/WEB-INF/cdr/ActiveCallsPanel_de.properties
@@ -1,1 +1,2 @@
-error=Liste aktiver Anrufer konnte nicht vom Anrufumsetzer abgerufen werden.
+error=Abruf der aktiven Rufe vom Call Resolver fehlgeschlagen.
+title=Aktive Rufe
