--- a/sipxpbx/WEB-INF/cdr/CdrTable_de.properties
+++ b/sipxpbx/WEB-INF/cdr/CdrTable_de.properties
@@ -3,13 +3,7 @@ callee=Angerufener
 startTime=Anfang
 duration=Dauer
 termination=Status
-state.REQUESTED=Angefordert
-state.COMPLETED=Abgeschlossen
-state.FAILED=Fehler
-state.IN_PROGRESS=Dauert an
-state.UNKNOWN=Unbekannt
-state.TRANSFER=Gebracht
-state.ABANDONED=Verlassen
+
 VM=Anrufbeantworter
 PARK=Anruf parken
 RPARK=Call Park Retrieve
@@ -19,6 +13,20 @@ MOB=Mobile
 REST=Limitiert
 AA=Automatisches Antwortsystem
 LD=Ferngespr\u00E4ch
-TF=Gratisanruffe
+TF=Gratisanrufe
 STS=Site to Site
 PAGE=Page
+
+
+state.REQUESTED=Angefordert
+state.COMPLETED=Abgeschlossen
+state.FAILED=Fehlgeschlagen/Nicht angenommen
+state.IN_PROGRESS=Laufend
+state.TRANSFER=Weitergeleitet
+state.ABANDONED=Offen
+state.UNKNOWN=Unbekannt
+
+recipient=Angenommen von
+
+tooltip.call=Click to call...
+title=Anrufe
