--- a/sipxpbx/WEB-INF/common/AutoRefreshForm_de.properties
+++ b/sipxpbx/WEB-INF/common/AutoRefreshForm_de.properties
@@ -5,3 +5,5 @@ refreshHelp=Diese Seite aktualisiert sich automatisch. Sie k\u00F6nnen die autom
  "Alles Aktualisieren" l\u00F6schen.  Sie k\u00F6nnen ebenfalls das Aktualisierungs-Intervall \u00E4ndern, indem Sie einen neuen \
  Wert eingeben.
 seconds=Sekunden
+save=Speichern
+cancel=Abbrechen
