--- a/sipxpbx/WEB-INF/common/ProfilePreview_de.properties
+++ b/sipxpbx/WEB-INF/common/ProfilePreview_de.properties
@@ -1,1 +1,1 @@
-msg.preview=Klicken Sie zum Herunterladen der Ger\u00E4tekonfigurationsdatei auf die nachstehenden Links:
+msg.preview=Um die Ger\u00E4tekonfigurationen herunterzuladen klicken Sie auf die folgenden Links:
