--- a/sipxpbx/WEB-INF/conference/ConferencesPanel_de.properties
+++ b/sipxpbx/WEB-INF/conference/ConferencesPanel_de.properties
@@ -1,5 +1,14 @@
 name=Name
+owner=Besitzer
 extension=Nebenstellennummer
 description=Beschreibung
 add_link=Neue Konferenz hinzuf\u00FCgen
 button.delete=L\u00F6schen
+button.lock=Sperren
+button.unlock=Entsperren
+active=Teinehmer
+msg.success.lock=Die gew\u00E4hlte(n) Konferenz(en) wurden gesperrt. Es k\u00F6nnen keine Teilnehmer mehr beitreten.
+msg.success.unlock=Die gew\u00E4hlte(n) Konferenz(en) wurden entsperrt. Es k\u00F6nnen Teilnehmer beitreten.
+error.lockEmpty=Konferenz "{0}" konnte nicht gesperrt werden. Nur Konferenzen mit mindestens einem Teilnehmer k\u00F6nnen gesperrt werden.
+error.unlockEmpty=Konferenz "{0}" konnte nicht entsperrt werden. Nur Konferenzen mit mindestens einem Teilnehmer k\u00F6nnen entsperrt werden.
+title=Konferenz Einstellungen
