--- a/sipxpbx/WEB-INF/conference/EditConference_de.properties
+++ b/sipxpbx/WEB-INF/conference/EditConference_de.properties
@@ -1,3 +1,11 @@
 title=Konferenz
 prompt.selectParticipants=Konferenzteilnehmer hinzuf\u00FCgen
 title.selectParticipants=Suche f\u00FCr den Benutzer, welcher zur Konferenz hinzugef\u00FCgt werden soll.
+tab.config=Einstellungen
+tab.participants=Teilnehmer
+tab.dimdim=Web Konferenz
+tab.chat=IM Chat Raum
+crumb.conferencing=Konferenz
+crumb.newConference=Neue Konferenz
+label.autorecord=Automatische Aufnahme
+description.autorecord=Nach Aktivierung werden alle Konferenzgespr\u00E4che aufgenommen und im Sprachnachrichten Postfach des Besitzers abgespeichert.
