--- a/sipxpbx/WEB-INF/dialplan/AttendantMenuPanel_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/AttendantMenuPanel_de.properties
@@ -12,3 +12,6 @@ menuItemAction.voicemail_access            = Im Anrufbeantworter anmelden
 menuItemAction.voicemail_deposit           = Nachricht hinterlassen
 
 parameter = Parameter
+extension=Durchwahl
+title=Attendant Menu
+msg.error.keyInUse=Taste {0} wird bereits benutzt.
