--- a/sipxpbx/WEB-INF/gateway/port/GatewayPorts_de.properties
+++ b/sipxpbx/WEB-INF/gateway/port/GatewayPorts_de.properties
@@ -1,3 +1,4 @@
-link.addPort=Port hinzuf\u00FCgen
-confirm.delete=M\u00F6chten Sie die ausgew\u00E4hlten Ports wirklich l\u00F6schen?
-index=Port
+link.addPort=PSTN Leitung hinzuf\u00FCgen
+confirm.delete=Sind Sie sicher, dass Sie die markierten Leitungen l\u00F6schen wollen?
+index=PSTN Leitung
+title=Gateway Ports
