--- a/sipxpbx/WEB-INF/sipXconfig-web_de.properties
+++ b/sipxpbx/WEB-INF/sipXconfig-web_de.properties
@@ -23,6 +23,7 @@ name=Name
 presence.closed=Abgemeldet
 presence.na=Nicht verf\u00FCgbar
 presence.open=Angemeldet
+prompt.here=hier
 prompt.select=ausw\u00E4hlen ...
 product.copyright=Copyright (C) SIPfoundry 2004-2010. An den Benutzer lizenziert unter der LGPL-Lizenz.
 product.name=sipXconfig
@@ -41,7 +42,7 @@ label.pin2=PIN best\u00E4tigen
 error.pinMismatch=Die beiden eingegebenen PIN sind nicht gleich
 more.etc=mehr ...
 unmanagedService.ntpService=NTP
-scheduleDay.Every day=T\u00E4glich
+scheduleDay.Every\ day=T\u00E4glich
 scheduleDay.Sunday=Sonntag
 scheduleDay.Monday=Montag
 scheduleDay.Tuesday=Dienstag
@@ -52,8 +53,8 @@ scheduleDay.Saturday=Samstag
 scheduleDay.Weekdays=Wochentage
 scheduleDay.Weekend=Wochenende
 schedule=Zeitplan
-ring.delay.If no response=Wenn keine Antwort
-ring.delay.At the same time=Gleichzeitig
+ring.delay.If\ no\ response=Wenn keine Antwort
+ring.delay.At\ the\ same\ time=Gleichzeitig
 # asset selector
 download.audio=Anh\u00F6ren
 download.general=Herunterladen
@@ -74,11 +75,17 @@ label.sipxParkService=Park
 label.sipxPageService=Paging
 label.sipxPresenceService=ACD Agent Status
 label.sipxProxyService=SIP Proxy
+label.sipxRecordingService=Konferenzaufnahme
 label.sipxRelayService=Media Relay
 label.sipxRegistrarService=SIP Registrar
 label.sipxRlsService=Presence
+label.sipxSaaService=Shared Appearance Agent
 label.sipxStatusService=Voicemail MWI
 label.sipxSupervisorService=Supervisor
+label.sipxOpenfireService=Instant Messaging
+label.sipxRestService=Anrufsteuerung
+label.sipxProvisionService=Telefon Provisionierung
+
 bundle.management=Management
 bundle.primarySipRouter=Primary SIP Router
 bundle.redundantSipRouter=Redundante SIP Router
@@ -90,3 +97,6 @@ version.mismatch=Versionskonflikt
 resource.missing=Fehlende Ressourcen
 stderr.msg=Standardfehler
 stdout.msg=Standardausgabe
+
+title=Startseite
+titleAbout=\u00DCber
