--- a/sipxpbx/WEB-INF/speeddial/SpeedDialPage_de.properties
+++ b/sipxpbx/WEB-INF/speeddial/SpeedDialPage_de.properties
@@ -5,3 +5,5 @@ quick.help=Kurzwahlrufnummern k\u00F6nnen f\u00FCr Benutzer individuell definier
  werden k\u00F6nnen.
 
 button.updatePhones=Speichern und Telefon(e) aktualisieren
+label.groupSync=Benutze Gruppenschnellwahltasten
+description.groupSync=<em><b>Achtung</b></em>:Das Einschalten dieser Option wird alle bestehenden Schnellwahlen entfernen und durch die Gruppenschnellwahltasten ersetzen.
