--- a/sipxpbx/WEB-INF/user/EditPersonalAttendant_de.properties
+++ b/sipxpbx/WEB-INF/user/EditPersonalAttendant_de.properties
@@ -1,5 +1,4 @@
-description.language=Die vom AutoAttendant verwendete Sprache im Feld \u00DCberschreiben wird oben gew\u00E4hlt.
-description.overrideLanguage=W\u00E4hlen Sie dieses Kontrollk\u00E4stchen, um die vom Administrator gew\u00E4hlte Standardsprache f\u00FCr den AutoAttendant zu \u00FCberschreiben.
-label.overrideLanguage=Sprache \u00FCberschreiben
-label.language=Sprache
-label.default=Standard
+language.description=Die vom AutoAttendant genutzt Sprache falls Sprache \u00E4ndern markiert wurde.
+description.overrideLanguage=Markieren um die vorgegebene Sprache zu \u00E4ndern.
+label.overrideLanguage=Sprache \u00E4ndern.
+title=Autoattendant
