--- a/sipxpbx/WEB-INF/user/FirstUser_de.properties
+++ b/sipxpbx/WEB-INF/user/FirstUser_de.properties
@@ -4,3 +4,5 @@ help2=PINs f\u00FCr normale Benutzer bestehen normalerweise aus nur Ziffern, so 
 label.newPin=Neuer PIN
 label.confirmNewPin=PIN best\u00E4tigen
 message.newPinMismatch=Die zwei eingegebenen PIN sind nicht gleich
+button.agree=OK
+title=Willkommen
