--- a/sipxpbx/WEB-INF/user_portal/UserCallForwardingComponent_de.properties
+++ b/sipxpbx/WEB-INF/user_portal/UserCallForwardingComponent_de.properties
@@ -1,5 +1,9 @@
-title=Anrufweiterleitung
-add=Nummer hinzuf\u00FCgen
-msg.first=Durchwahl {0} klingelt zuerst.
-msg.voicemail=Wenn keine der oben genannten Durchwahlen antwortet, wird der Anruf an Ihre Voicemailbox weitergeleitet.
-quick.help=<p>F\u00FCgen Sie interne Durchwahlnummern, externe Nummern oder SIP-Adressen hinzu, an die der Anruf umgeleitet werden soll, bevor dieser an die Voicemail des Benutzers gesendet wird.<br/>Anrufe werden der Reihe nach weitergeleitet - <em>wenn keine Antwort</em> oder parallel - <em>gleichzeitig</em>. Wird ein Anruf parallel weitergeleitet, so klingeln alle Durchwahlen und der Anruf wird an diejenige durchgestellt, die zuerst antwortet.</p><p>Jede Durchwahl kann einzeln aktiviert oder deaktiviert werden. Nur aktivierte Durchwahlnummern wirken sich auf das Anrufweiterleitungsverhalten aus. Deaktivierte Durchwahlnummern werden f\u00FCr den sp\u00E4teren Gebrauch aufgespart.</p><p>Wenn keine der Durchwahlnummern auf der Liste erfolgreich ist, wird der Anruf an die Voicemail des Benutzers weitergeleitet. Wenn der Benutzer keine Voicemail-Berechtigung hat, h\u00F6rt der Anrufer das Besetztzeichen.</p>
+title=Anruf Weiterleitung
+add=Regel hinzuf\u00FCgen
+label.ring=klingel f\u00FCr
+msg.first=Durchwahl {0} wird zuerst klingen f\u00FCr
+msg.voicemail=Wenn das Gespr\u00E4ch nicht angenommen wird, wird es an den Anrufbeantworter weitergeleitet.
+msg.seconds=Sekunden
+quick.help=<p>Interne Durchwahlen, externe Nummern oder SIP Adressen hinzuf\u00FCgen um Gespr\u00E4che weiterzuleiten bevor sie auf den Anrufbeantworter geleitet werden.<br/>\
+Anrufe werden sequentiell weitergeleitet - <em>wenn nicht angenommen wird</em> oder parallel - <em>zur gleichen Zeit</em>. Wenn parallel weitergeleitet wird, klingeln alle Durchwahlen und der Anruf wird an das Telefon durchgestellt, an dem zuerst angenommen wurde.</p><p>Jede Weiterleitungsregel kann individuell ein- oder ausgeschaltet werden. Nur eingeschaltete Regeln beeinflussen das Verhalten bei Anrufen. Ausgeschaltete Regeln werden gespeichert f\u00FCr die sp\u00E4tere Verwendung.</p><p>Wenn an keinem der beteiligten Telefon angenommen wurde, wird der Anruf zum Anrufbeantworter durchgestellt. Besitzt der Teilnehmer keine Anrufbeantworterberechtigung, h\u00F6rt der Anrufer ein Besetztzeichen.</p>
+
