--- a/sipxpbx/WEB-INF/vm/MailboxPreferencesForm_de.properties
+++ b/sipxpbx/WEB-INF/vm/MailboxPreferencesForm_de.properties
@@ -16,3 +16,53 @@ activeGreeting.NONE=Standard Begr\u00FCssungsnachricht
 activeGreeting.STANDARD=Standard
 activeGreeting.OUT_OF_OFFICE=Nicht im B\u00FCro
 activeGreeting.EXTENDED_ABSENCE=L\u00E4ngere Abwesenheit
+
+label.primaryEmail=Prim\u00E4re E-Mail Adresse
+label.voicemailProperties=Sprachnachricht Benachrichtigung
+attachType.YES=E-Mail Benachrichtigung
+attachType.NO=Keine Benachrichtigung
+
+description.voicemailProperties=Sprachnachrichten k\u00F6nnen an die Benachrichtigungsmail angeh\u00E4ngt werden.
+
+mailFormat.FULL=Voll
+mailFormat.MEDIUM=Mittel
+mailFormat.BRIEF=Kurz
+
+label.emailFormat=E-Mail Format
+description.emailFormat=Einstellung des E-Mail Formats. Voll = HTML und Text mit Links, Mittel = HTML und Text, Kurz = Nur Text
+label.includeAudioAttachment=Sprachnachricht anh\u00E4ngen
+
+label.attachVoicemailToEmail=Sprachnachricht anh\u00E4ngen
+description.attachVoicemailToEmail=Wenn die Option markiert wurde wird der E-Mail die Sprachnachricht angeh\u00E4ngt. Andernfalls enth\u00E4lt die E-Mail einen Link zur Sprachnachricht.
+
+label.additionalEmail=Zus\u00E4tzliche E-Mail Adresse
+label.voicemailToAlternateEmailNotification=Sprachnachricht Benachrichtigung
+label.busyPrompt=Anrufer \u00FCber belegte Benutzer informieren
+description.busyPrompt=Anrufern erlauben die "Benutzer ist im Gespr\u00E4ch" Nachricht zu h\u00F6ren wenn der Benutzer im Gespr\u00E4ch ist. Für lokale Gespr\u00E4che bitte den Instant Messaging Zugang aktivieren.
+label.voicemailTui=Anrufbeantworter Telefonbenutzerschnittstelle
+description.voicemailTui=Die Anrufbeantworter Telefonbenutzerschnittstelle w\u00E4hlen.
+voicemailTuiType.STANDARD=Standard
+voicemailTuiType.CALLPILOT=CallPilot
+label.externalMwi=Externe MWI
+description.externalMwi=Die Nummer, die zum Senden von Message Waiting Indications an externe Teilnehmer gesendet werden soll.
+
+attachType.IMAP=Synchronisiere mit dem IMAP Server
+
+label.imapHost=IMAP Server
+description.imapHost=
+label.imapPort=IMAP Port
+description.imapPort=
+label.imapTLS=IMAP TLS
+description.imapTLS=
+
+description.includeAudioAttachment=Wenn die Option markiert wurde wird der E-Mail die Sprachnachricht angeh\u00E4ngt. Andernfalls enth\u00E4lt die E-Mail einen Link zur Sprachnachricht.
+label.imNotification=IM Benachrichtigung
+description.voicemailToAlternateEmailNotification =
+label.includeAudioAttachmentAlternateEmail=Sprachnachricht anh\u00E4ngen
+description.includeAudioAttachmentAlternateEmail=Wenn die Option markiert wurde wird der E-Mail die Sprachnachricht angeh\u00E4ngt. Andernfalls enth\u00E4lt die E-Mail einen Link zur Sprachnachricht.
+label.alternateEmailFormat=E-mail Format
+description.alternateEmailFormat=
+label.imapAccount=IMAP Zugang
+description.imapAccount=
+label.imapPassword=IMAP password
+description.imapPassword=
