--- a/sipxpbx/WEB-INF/vm/ManageVoicemail_de.properties
+++ b/sipxpbx/WEB-INF/vm/ManageVoicemail_de.properties
@@ -1,4 +1,5 @@
 title.manageVoicemail=Anrufbeantworter
+title=Voicemail
 subject=Titel
 from=Von
 timestamp=Datum
@@ -7,5 +8,13 @@ play=Abspielen
 tab.inbox=Inbox
 tab.deleted=Gel\u00F6scht
 tab.saved=Gespeichert
+tab.conference=Konferenzaufnahmen
 confirm.delete=Sind Sie sicher, dass die selektierten Nachricht(en) gel\u00F6scht werden soll(en)?
 label.moveTo=Verschieben nach
+warning.noVoicemailPermissionNotice=Sie haben keine Anrufbeantworterberechtigung.
+tooltip.call=Klicken um zu w\u00E4hlen...
+call=Anrufen
+voicemail.install.error=Anrufbeantworterservice ist nich verf\u00FCgbar
+error.https.server.status.code=Http Server auf {0} gab folgenden Fehler zur\u00FCck: {1}
+error.https.server=Verbindung zu {0} konnte nicht aufgebaut werden.\n{1}
+error.io.exception=Http Server auf {0} gab folgende I/O exception zur\u00FCck: {1}
