--- a/sipxpbx/commserver/user-settings_de.properties
+++ b/sipxpbx/commserver/user-settings_de.properties
@@ -41,6 +41,12 @@ permission.call-handling.Voicemail.description=Der Benutzer erh\u00E4lt einen pe
 permission.call-handling.RecordSystemPrompts.label=Systemnachrichten aufnehmen
 permission.call-handling.RecordSystemPrompts.description=Der Benutzer kann Systemnachrichten ("Prompts") durch das Telefon aufnehmen.
 
+permission.voicemail-server.label=Voicemail Server
+permission.voicemail-server.description=Es kann nur ein Voicemail server angegeben werden
+permission.voicemail-server.FreeswitchVoicemailServer.label=Interner Voicemail Server
+permission.voicemail-server.SipXVoicemailServer.label=Alter interner Voicemail Server
+permission.voicemail-server.ExchangeUMVoicemailServer.label=Microsoft Exchange UM Voicemail Server
+
 caller-alias.label=Anruferidentifikation
 caller-alias.description=
 
@@ -56,3 +62,86 @@ personal-attendant.description=Konfiguriere den pers\u00F6nlichen Anrufbeantwort
 personal-attendant.operator.label=Rezeptionist
 personal-attendant.operator.description=Dr\u00FCcken der Taste 0 transferiert den Anruf an die folgende Nebenstelle oder SIP URI.
 
+voicemail.label=Unified Messaging
+
+voicemail.mailbox.label=Voicemail
+voicemail.mailbox.description=
+
+voicemail.mailbox.voicemail-tui.label=Voicemail TUI
+voicemail.mailbox.voicemail-tui.description=Telephony User Interface auswaehlen.
+voicemail.mailbox.voicemail-tui.label.stdui=Standard
+voicemail.mailbox.voicemail-tui.label.cpui=CallPilot
+
+voicemail.imap.label=IMAP
+voicemail.imap.description=Ermoeglicht den Zugriff auf die Voicemail und E-Mail ueber IMAP.
+
+voicemail.imap.host.label=IMAP Server Host
+voicemail.imap.host.description=
+
+voicemail.imap.port.label=IMAP Server Port
+voicemail.imap.port.description=
+
+voicemail.imap.tls.label=TLS
+voicemail.imap.tls.description=Fuer IMAP wird TLS benoetigt.
+
+voicemail.imap.password.label=IMAP Server Passwort
+voicemail.imap.password.description=
+
+voicemail.fax.label=Fax
+voicemail.fax.description=Fuer den faxempfang muss eine E-Mail-Adresse angegeben werden.
+voicemail.fax.extension.label=Erweiterung
+
+im.label=Instant Messaging
+im.description=
+
+im.im-account.label=IM Account aktivieren
+im.im-account.description=Der Account wird fuer den Instant Messaging Dienst freigeschaltet.
+
+im.im-group.label=Benutzergruppe als IM-Gruppe hinzufuegen
+im.im-group.description=Fuegt die Benutzergruppe dem Instant Messaging Dienst als IM-Gruppe hinzu.
+
+im.add-pa-to-group.label=MyBuddy zur IM-Gruppe hinzufuegen
+im.add-pa-to-group.description=MyBuddy als Mittglied der IM-Gruppe hinzufuegen.  MyBuddy kann nicht vom Benutzer entfernt werden.
+
+im.advertise-sip-presence.label=Telefonstatus im IM anzeigen
+im.advertise-sip-presence.description=Zeigt fuer den Benutzer <em>besetzt</em> als XMPP-Statusmeldung an.
+
+im.include-call-info.label=Anruferstatus im IM anzeigen
+im.include-call-info.description=Zeigt den Anruferstatus <em>besetzt</em> als XMPP-Statusmeldung an.
+
+im.on-the-phone-message.label=Statusmeldung
+im.on-the-phone-message.description=XMPP Details wenn der Benutzer den Status <em>besetzt</em> hat.
+
+im.fwd-vm-on-dnd.label=Voicemail bei DnD
+im.fwd-vm-on-dnd.description=Telefongespraeche werden automatisch bei dem Status <em>Do Not Disturb</em> zur Voicemailbox weitergeleitet.
+im_notification.label=MyBuddy
+im_notification.conferenceEntryIM.label=Beim Betreten der Konferenz
+im_notification.conferenceEntryIM.description=Eine Instant Message zustellen wenn jemand die Konferenz betritt.
+
+im_notification.conferenceExitIM.label=Beim Verlassen der Konferenz
+im_notification.conferenceExitIM.description=Eine Instant Message zustellen wenn jemand die Konferenz verl\u00E4sst.
+
+im_notification.leaveMsgBeginIM.label=Voicemail Start IM
+im_notification.leaveMsgBeginIM.description=Sendet eine IM-Nachricht, sobald eine Voicemail-Aufzeichung gebinnt.
+
+im_notification.leaveMsgEndIM.label=Voicemail aufgesprochen IM
+im_notification.leaveMsgEndIM.description=Sendet eine IM-Nachricht, sobald eine Voicemail aufgezeichnet wurde.
+
+callfwd.label=Rufweiterleitung
+callfwd.description=
+
+callfwd.timer.label=Rufverzoegerung
+callfwd.timer.description=Wartezeit (in Sekunden) in der das eigene Telefon klingelt, bis die Rufweiterleitung ausgefuert wird. \
+  Fuer Gruppen kann ein Standard-Wert festgelegt werden. Diesr kann von jedem Benutzer individuell angepasst werden. \
+  Wenn kein Wert angegeben ist, wird die <B>Standardwartezeit</B> verwendet.
+
+moh.label=Wartemusik
+moh.description=
+
+moh.audio-source.label=Audioquelle
+moh.audio-source.description=Audioquelle fuer Wartemusik auswaehlen.
+moh.audio-source.label.FILES_SRC=Systemverzeichnis fuer Musik
+moh.audio-source.label.PERSONAL_FILES_SRC=Eigenes Musikverzeichnis
+moh.audio-source.label.SOUNDCARD_SRC=Soundkarte
+moh.audio-source.label.SYSTEM_DEFAULT=Verwende Systemkonfiguration
+moh.audio-source.label.NONE=Keine
