--- a/sipxpbx/sipxconference/conference_de.properties
+++ b/sipxpbx/sipxconference/conference_de.properties
@@ -1,8 +1,3 @@
-## types
-## settings
-#fs-conf-conference.label=
-#fs-conf-conference.description=
-
 fs-conf-conference.organizer-code.label=Organisator PIN
 fs-conf-conference.organizer-code.description=DTMF Ziffern f\u00FCr den Organisator PIN.
 
@@ -12,23 +7,34 @@ fs-conf-conference.participant-code.description=DTMF Ziffern f\u00FCr Teilnehmer
 fs-conf-conference.organizer_admit.label=Organisator erforderlich
 fs-conf-conference.organizer_admit.description=Wenn gesetzt so muss der Organisator die Konferenc \u00F6ffnen bevor Teilnehmern der Zugang erlaubt ist. 
 
-#fs-conf-conference.AOR.label=
-fs-conf-conference.AOR.description=The SIP URI (may include the full name-addr value) this conference should register and use \
- as its AOR. The default is the conference 'name' token as the user part with the \
- FS_BRIDGE_SIP_DOMAIN host part.
+fs-conf-conference.AOR.description=Die SIP URI auf der sich diese Konferenz registrieren soll. Der Standardwert ist das Konferenz 'name' Zeichen als Benutzerteil der URI mit der Domain FS_BRIDGE_SIP_DOMAIN als Host Teil.
 
-fs-conf-conference.ACCESS.label=Access control
-fs-conf-conference.ACCESS.description=Selects the access control mechanism for this conference. If set to "Open" any call to the \
- AOR or contact address for the conference is accepted and immediatly joins the conference. Otherwise \
- participants are required to enter access code, and optionally wait for organizer to start a \
- conference.
-fs-conf-conference.ACCESS.label.OPEN=Open
-fs-conf-conference.ACCESS.label.REMOTE_ADMIT=Use access codes
+fs-conf-conference.ACCESS.label=Zugriffskontrolle
+fs-conf-conference.ACCESS.description=W\u00E4hlt den Zugriffskontrollmechanismus für die Konferenz. Wenn der Wert "Offen" ist, werden alle Teilnehmer direkt zugelassen. Andernfalls muss der Teilnehmer seine PIN eingeben.
+fs-conf-conference.ACCESS.label.OPEN=Offen
+fs-conf-conference.ACCESS.label.REMOTE_ADMIT=Zugangscode benutzen
 
-fs-conf-conference.MAX_LEGS.label=Maximum legs
-fs-conf-conference.MAX_LEGS.description=The maximum number of call legs to be allowed by this bridge. 0 means \
- unlimited.
+fs-conf-conference.MAX_LEGS.label=Maximale Teilnehmer
+fs-conf-conference.MAX_LEGS.description=Die maximale Teilnehmerzahl dieser Konferenz. 0 bedeutet unbegrenzte Teilnehmer.
 
-#fs-conf-conference.FS_BRIDGE_CONFERENCE.REMOTE_ADMIT.SECRET.label=
-fs-conf-conference.FS_BRIDGE_CONFERENCE.REMOTE_ADMIT.SECRET.description=Automatically generated value that is used by remote admittance control.
+fs-conf-conference.FS_BRIDGE_CONFERENCE.REMOTE_ADMIT.SECRET.description=Automatisch generierter Wert, der von der Zutrittskontrolle genutzt wird.
 
+fs-conf-conference.MOH.label=Wartemusikquelle
+fs-conf-conference.MOH.description=W\u00E4hlt die Quelle der Wartemusik. <em>System Music Verzeichnis</em> nutzt die Musikdateien der gemeinsamen Wartemusikdatenbank. <em>Soundkarte</em> gibt den Ton der Soundkarte der Telefonanlage wieder.
+fs-conf-conference.MOH.label.FILES_SRC=System Music Verzeichnis
+fs-conf-conference.MOH.label.SOUNDCARD_SRC=Soundkarte
+
+web-meeting.dimdim-host.label=Dimdim Server
+web-meeting.user.label=Dimdim ID
+web-meeting.user.description=Falls leer, wird der Benutzername des Konferenzbesitzers benutzt.
+web-meeting.password.label=Dimdim Passwort
+web-meeting.did.label=Einwahlnummer
+web-meeting.did.description=Optionale Einwahlnummer, die in DimDim angezeigt wird. Es sollte die Nummer sein unter der sich externe Teilnehmer in die Telefonkonferenz schalten k\u00F6nnen.
+
+chat-meeting.moderated.label=Moderiert
+chat-meeting.moderated.description=Wenn aktiv, kann nur der Besitzer des Chatraums Nachrichten senden. Externe Benutzer k\u00F6nnen vom Besitzer Rechte erhalten. Dazu ist das Kommando "/role participant nickname" notwendig.
+
+chat-meeting.public.label=\u00D6ffentlich
+chat-meeting.public.description=Ein \u00F6ffentlicher Chatraum.
+
+chat-meeting.members-only.label=Nur Mitglieder
