--- a/sipxpbx/WEB-INF/acd/AcdSupervisorConsole_de.properties
+++ b/sipxpbx/WEB-INF/acd/AcdSupervisorConsole_de.properties
@@ -3,3 +3,4 @@ tab.agentPresence=Pr\u00E4senz des Agenten
 tab.agentsStats=Agenten-Statistik
 tab.callsStats=Anruf-Statistik
 tab.queuesStats=Warteschlangen-Statistik
+tab.selectServer=Server ausw\u00E4hlen
