--- a/sipxpbx/WEB-INF/acd/ListAcdServers_de.properties
+++ b/sipxpbx/WEB-INF/acd/ListAcdServers_de.properties
@@ -5,3 +5,4 @@ label.jobStatus=Dienstestatus
 quick.help=Sie k\u00F6nnen Aenderungen and der Konfiguration vornehmen ohne laufende ACD dienste zu beeinflussen.<br/> \
  Selektieren Sie den Server und dr\u00FCcken Sie <em>Aktivieren</em> um Konfigurations\u00E4nderungen aktiv zu machen.<br/> \
  Wenn n\u00F6tig werden bei Konfigurations\u00E4nderungen ACD-Server neu gestarted.
+label.locationsPage=Server
