--- a/sipxpbx/WEB-INF/setting/RegistrationsTable_de.properties
+++ b/sipxpbx/WEB-INF/setting/RegistrationsTable_de.properties
@@ -1,7 +1,10 @@
+#Created by JInto - www.guh-software.de
+#Mon Oct 09 11:54:33 CEST 2006
 button.refresh=Aktualisieren
 contact=Kontakt
 expires=Verfall [s]
-status.expired=Abgelaufen
+status.expired=Verfallen
 title=Registrierungen
 uri=URI
-primary=Prim\u00E4rer Registrierungsserver
+primary=Prim\u00E4rer Registrar
+instrument=Telefon
