--- a/sipxpbx/aastra/line_de.properties
+++ b/sipxpbx/aastra/line_de.properties
@@ -45,7 +45,8 @@ Settings.srtp_mode.description=Bestimmt die RTP Verschlüsselungsmethode für da
 Not_needed.label=Nicht benötigt?
 Not_needed.bla_number.label=BLA Nummer
 Not_needed.bla_number.description=
-Not_needed.line_summary_subscription.label=Leitungszusammenfassung Abonnement Not_needed.line_summary_subscription.description=
+Not_needed.line_summary_subscription.label=Leitungszusammenfassung Abonnement 
+Not_needed.line_summary_subscription.description=
 Not_needed.mode.label=Mode
 Not_needed.mode.description=
 
