--- a/sipxpbx/acd/sipxacd-queue_de.properties
+++ b/sipxpbx/acd/sipxacd-queue_de.properties
@@ -9,6 +9,14 @@
 #acd-queue.name.label=
 #acd-queue.name.description=A short descriptive name for this queue. Used primarily for display purposes.
 
+acd-queue.overflow-type.label=Overflow Type
+acd-queue.overflow-type.description=Define an overflow type
+acd-queue.overflow-type.label.1=Queue
+acd-queue.overflow-type.label.2=Hunt Group
+
+acd-queue.overflow-typeValue.label=Overflow destination
+acd-queue.overflow-typeValue.description= Overflow destination value depending on the selected overflow type.
+
 acd-queue.overflow-entry.label=Ueberlaufdestination
 acd-queue.overflow-entry.description= Der Anruf kann an eine interne Nebenstselle oder an eine SIP-Addresse weitergeleitet \
  werden, falls ein Ueberlauf auftritt und keine Ueberlauf-Warteschlange definiert ist.
@@ -101,3 +109,11 @@ acd-queue.acd-agent-list.description=The list of ACD Agents that are assigned to
 acd-queue.agents-wrap-up-time.label= Pausenzeit
 acd-queue.agents-wrap-up-time.description=Dauer in Sekunden der Pausenzeit, die vergehen muss, bis nach Abschluss eines \
   Gespr\u00E4chs ein neuer Anruf an den Agenten durchgestellt wird.
+
+acd-queue.agents-non-responsive-time.label= Agent Non-Responsive time
+acd-queue.agents-non-responsive-time.description=The period of time, in seconds, that has to pass before the ACD transfers \
+  a new call to an agent after a previous call was not answered.
+
+acd-queue.max-bounce-count.label= Maximum Bounce Count
+acd-queue.max-bounce-count.description=The number of rejected or non-answered calls an agent may have \
+  before being "bounced" (automatically signed out).  If set to 0, it will be disabled.
