--- a/sipxpbx/acd/sipxacd-queue_de.properties
+++ b/sipxpbx/acd/sipxacd-queue_de.properties
@@ -9,15 +9,15 @@
 #acd-queue.name.label=
 #acd-queue.name.description=A short descriptive name for this queue. Used primarily for display purposes.
 
-acd-queue.overflow-type.label=Overflow Type
-acd-queue.overflow-type.description=Define an overflow type
-acd-queue.overflow-type.label.1=Queue
-acd-queue.overflow-type.label.2=Hunt Group
+acd-queue.overflow-type.label=Überlauf Typ
+acd-queue.overflow-type.description=Definieren Sie einen Overflow Typ
+acd-queue.overflow-type.label.1=Warteschlange
+acd-queue.overflow-type.label.2=Hunt Gruppe
 
-acd-queue.overflow-typeValue.label=Overflow destination
-acd-queue.overflow-typeValue.description= Overflow destination value depending on the selected overflow type.
+acd-queue.overflow-typeValue.label=Ueberlaufziel
+acd-queue.overflow-typeValue.description=Ueberlaufziel Wert h\u00E4ngt von dem gew\u00E4hlten Ueberlauf Typ ab.
 
-acd-queue.overflow-entry.label=Ueberlaufdestination
+acd-queue.overflow-entry.label=Ueberlaufziel
 acd-queue.overflow-entry.description= Der Anruf kann an eine interne Nebenstselle oder an eine SIP-Addresse weitergeleitet \
  werden, falls ein Ueberlauf auftritt und keine Ueberlauf-Warteschlange definiert ist.
 
@@ -65,14 +65,14 @@ acd-queue.barge-in.label=Rasche Weiterleitung
 acd-queue.barge-in.description=Falls gesetzt, so wird der Anrufer so bald als m\u00F6glich mit dem Agenten verbunden, m\u00F6glicherweise \
  bevor die Begr\u00FCssungsnachricht beendet ist.
 
-acd-queue.call-connect-scheme.label=Call connecting scheme
-acd-queue.call-connect-scheme.description=This specifies the internal scheme that is used to connect an incoming caller to an agent. \
- Depending on which scheme is selected, certain call features such as Agent Conferencing and Session \
- Recording might not be available.
-acd-queue.call-connect-scheme.label.1=Bridge
+acd-queue.call-connect-scheme.label=Anruf Schema
+acd-queue.call-connect-scheme.description=Dies spezifiziert das interne Schema, welches daf\u00FCr benutzt wird einen ankommenden Anrufer an einen Agent weiterzuleiten. \
+ Abh\u00E4ngig davon, welches Schema ausgew\u00E4hlt ist, werden bestimmte Anruffunktionen wie z.B. Agent Konferenzen und Session \
+ Aufnahme nicht verf\u00FCgbar sein.
+acd-queue.call-connect-scheme.label.1=Br\u00FCcke
 acd-queue.call-connect-scheme.label.2=Transfer
-acd-queue.call-connect-scheme.label.3=Conference
-acd-queue.call-connect-scheme.label.4=Cut through
+acd-queue.call-connect-scheme.label.3=Konferenz
+acd-queue.call-connect-scheme.label.4=Cut Through
 
 acd-queue.welcome-audio.label=Begr\u00FCssungsnachricht
 acd-queue.welcome-audio.description=Begr\u00FCssungsnachricht im .wav Dateiformat. Wenn keine Datei angegeben ist, so h\u00F6rt der \
@@ -101,19 +101,19 @@ acd-queue.termination-tone-duration.description=Dauer in Sekunden des Besetztzei
  beendet werden muss. Ein Wert von 0 bedeutet, dass kein Besetztzeichen gespielt wird und der Anruf unmittelbar beendet wird.
 
 #acd-queue.acd-agent-list.label=
-acd-queue.acd-agent-list.description=The list of ACD Agents that are assigned to this queue. The queue will attempt to route calls \
- that it is processing to one or more of the listed agents based upon the agent availability and the queue \
- routing policy. The order of agents in the list is relevant in respect to call routing when the call \
- routing scheme for this queue is set to Linear.
+acd-queue.acd-agent-list.description=Die Liste der ACD Agents, die dieser Warteschlange zugeordnet sind. Die Warteschlange wird versuchen, Anrufe \
+ die sie bearbeitet, an einen oder mehrere gelistete Agents zu leiten, basierend auf der Verf\u00FCgbarkeit des Agents und der \
+ Warteschlangen Weiterleitungs Regeln. Die Anordnung der Agents in der Liste ist relevant f\u00FCr Anrufweiterleitung, wenn das Anruf- \
+ weiterleitungs Schema f\u00FCr die Warteschlange auf linear gesetzt ist.
 
 acd-queue.agents-wrap-up-time.label= Pausenzeit
 acd-queue.agents-wrap-up-time.description=Dauer in Sekunden der Pausenzeit, die vergehen muss, bis nach Abschluss eines \
   Gespr\u00E4chs ein neuer Anruf an den Agenten durchgestellt wird.
 
-acd-queue.agents-non-responsive-time.label= Agent Non-Responsive time
-acd-queue.agents-non-responsive-time.description=The period of time, in seconds, that has to pass before the ACD transfers \
-  a new call to an agent after a previous call was not answered.
+acd-queue.agents-non-responsive-time.label=Zeit, die der Agent nicht antwortet
+acd-queue.agents-non-responsive-time.description=Die Dauer, in Sekunden, die vergehen muss, bevor der ACD einen \
+  neuen Anruf an einen Agent weiterleitet, wenn der vorherige Anruf nicht beantwortet wurde.
 
-acd-queue.max-bounce-count.label= Maximum Bounce Count
-acd-queue.max-bounce-count.description=The number of rejected or non-answered calls an agent may have \
-  before being "bounced" (automatically signed out).  If set to 0, it will be disabled.
+acd-queue.max-bounce-count.label=Maximale Bounce Anzahl
+acd-queue.max-bounce-count.description=Die Nummer, der zur\u00FCckgewiesenen oder nicht beantworteten Anrufe, die ein Agent haben darf, \
+  bevor er "bounced" wird (automatisch ausgeloggt). Falls auf 0 gesetzt, wird das deaktiviert.
