--- a/sipxpbx/nattraversal/nattraversal_de.properties
+++ b/sipxpbx/nattraversal/nattraversal_de.properties
@@ -1,11 +1,17 @@
 relay-config.SIP_RELAY_LOG_LEVEL.label=Protokollierungsstufe
 
 nat.media-relay-temperament.label=Media Relay Temperament
-nat.media-relay-temperament.description=Bestimmt das Verhalten, welches vom NAT Traversal Feature übernommen wird \
-  wenn es erkennt, dass zwei Remote über NAT verbundene Endpunkte die gleiche öffentliche \
-  IP Adresse mitteilen. im aggressiven Modus wird ein Media Relay verwendet um die \
-  Medien zwischen den beiden Endpunkten zu transportieren. Wenn konservativ cerwendet wird, \
+nat.media-relay-temperament.description=Bestimmt das Verhalten, welches vom NAT Traversal Feature \u00FCbernommen wird \
+  wenn es erkennt, dass zwei Remote \u00FCber NAT verbundene Endpunkte die gleiche \u00F6ffentliche \
+  IP Adresse mitteilen. Im aggressiven Modus wird ein Media Relay verwendet um die \
+  Medien zwischen den beiden Endpunkten zu transportieren. Wenn konservativ verwendet wird, \
   werden die Endpunkte angewiesen die Medien direkt gegeneinander auszutauschen.
 
-nat.reject-stray-packets.label=Stray Pakete zurückweisen
-nat.reject-stray-packets.description=Bestimmt, ob das Media Relay Stray Pakete zurückweist.
+nat.reject-stray-packets.label=Stray Pakete zur\u00FCckweisen
+nat.reject-stray-packets.description=Bestimmt, ob das Media Relay Stray Pakete zur\u00FCckweist.
+
+nat.enabled.label=Aktiviere NAT Traversal
+nat.enabled.description=Aktiviert NAT traversal Funktionen um entfernte Arbeiter und entfernte Server hinter einem NAT zu unterst\u00FCtzen
+
+nat.behind-nat.label=Server hinter NAT
+nat.behind-nat.description=Muss aktiviert werden, wenn der Server hinter einem NAT/firewall steht.
