--- a/sipxpbx/sipxcallresolver/sipxcallresolver_de.properties
+++ b/sipxpbx/sipxcallresolver/sipxcallresolver_de.properties
@@ -27,3 +27,11 @@ callresolver.SIP_CALLRESOLVER_CALL_DIRECTION.label=Anrufrichtung
 callresolver.SIP_CALLRESOLVER_CALL_DIRECTION.description=Die Anrufrichtung berechnen. Bezeichnet Anrufe als eingehend, ausgehend oder \
  intern, je nachdem ob der Anruf von einem PSTN gateway kam, zu einem PSTN Gateway geleitet wurde, \
  oder nichts davon zutrifft.
+
+callresolver.SIP_CALLRESOLVER_CSE_POLLING_INTERVAL.label=CSE Abfrage Intervall
+callresolver.SIP_CALLRESOLVER_AGENT_PORT.label=Agent Port
+callresolver.SIP_CALLRESOLVER_CSE_QUEUE_SIZE.label=CSE Warteschlangen Gr\u00F6ße
+callresolver.SIP_CALLRESOLVER_CDR_QUEUE_SIZE.label=CSE Warteschlangen Gr\u00F6ße
+callresolver.SIP_CALLRESOLVER_MAX_CALL_LEN.label=Maximum Anruf L\u00E4nge
+callresolver.SIP_CALLRESOLVER_MAX_RINGING_CALL_LEN.label=Maximale klingelnde Anruf L\u00E4nge
+callresolver.SIP_CALLRESOLVER_MIN_CLEANUP_INTERVAL.label=Minimales Aufr\u00E4um Intervall
