--- a/sipxpbx/sipximbot/sipximbot_de.properties
+++ b/sipxpbx/sipximbot/sipximbot_de.properties
@@ -1,3 +1,9 @@
 imbot.httpPort.label=HTTP Port
 imbot.imId.label=IM ID
+imbot._imbot.paUserName.description=Die ID unter der ImBot Funktionen in der Kontaktliste sichtbar sind.
 imbot.imPassword.label=IM Passwort
+imbot.imbot.paPassword.description=Wenn der IM Server so konfiguriert ist, dass er LDAP nutzt, braucht er einen eigenen \
+Account um die MyBuddy Rolle zu spielen. Setzen Sie das MyBuddy's Passwort gleich wie das des LDAP Accounts. \
+Lassen Sie das default Passwort, wenn der IM kein LDAP benutzt.
+imbot.log.level.label=Logging Level
+imbot.label=MyBuddy Parameters
