--- a/sipxpbx/sipxivr/sipxivr_de.properties
+++ b/sipxpbx/sipxivr/sipxivr_de.properties
@@ -2,9 +2,19 @@ ivr.label=IVR Parameter
 
 ivr.log.level.label=Protokollierungsstufe
 
-ivr.freeswitch.eventSocketPort.label=FREESWITCH Event Socket Port
+ivr.audio.format.label=Voicemail Kodierungs Format
+ivr.audio.format.description=Kodierungs Format, welches benutzt werden soll um Voicemails zu speichern
 
-ivr.httpsPort.label=Port für IVR HTTPS Dienste
+ivr.record.rate.label=Aufnahme Rate
+ivr.record.rate.description=Rate (in Hz) die benutzt wird um Voicemails aufzunehmen
+
+ivr.record.time.label=Time limit
+ivr.record.time.description=Maximale Dauer (in Sekunden) der Voicemail Aufnahme.
+
+ivr.fax.format.label=Fax Format
+ivr.fax.format.description=Das Dateiformat für Faxe Empfangen
+
+ivr.ivr.freeswitch.eventSocketPort.label=FREESWITCH Event Socket Port
 
 ivr.voiceMailExpiry.label=Ablauf von Sprachnachrichten
 ivr.voiceMailExpiry.description=Die Anzahl von Tagen die eine Sprachnachricht im Müll-Ordner aufbewahrt wird.
