--- a/sipxpbx/sipxproxy/sipxproxy_de.properties
+++ b/sipxpbx/sipxproxy/sipxproxy_de.properties
@@ -1,21 +1,92 @@
-proxy-configuration.label=sipXproxy Parameters
+proxy-configuration.label=Configuration Parameters
 
-proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.label=Standard Serial Fork Ablauf
-proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.description=Anzahl an Sekunden die jedes Telefon in einer fortlaufenden Serie \
-  läuten darf bevor die nächste Alternative versucht wird. \
-  Die meistverwendeste Anwendung dafür ist ein Benutzer mit einem Telefon und einer Mailbox - \
-  das Telefon klingelt und wechselt dann nach der eingestellten Zeit auf die Mailbox.
-  
-proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.label=Standard Ablauf
-proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.description=Anzahl an Sekunden die ein Anruf unbeantwortet sein darf; \
-  wenn diese Zeit verstreicht wird die Anrufanfrage mit einem Fehler erwidert.
+proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.label=Default Serial Fork Expiration
+proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.description=Number of seconds that each phone in a sequential \
+series is allowed to ring with no answer before the next alternative is tried. \
+The most common case for this is a user with one phone and a voice mailbox - \
+the phone will ring for this many seconds and then roll over to voice mail.
+proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.label=Default Expiration
+proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.description=Number of seconds a call is allowed to go unanswered; \
+if this many seconds pass, the call request is returned with an error.
 
-proxy-configuration.SIPX_PROXY_DIALOG_SUBSCRIBE_AUTHENTICATION.label=Authentifiziere Dialogereigniss-Abonnements
-proxy-configuration.SIPX_PROXY_DIALOG_SUBSCRIBE_AUTHENTICATION.description=Warnung: Wenn die Authentifizierung ausgeschaltet wird, \
-  werden externe Benutzer nicht mehr länger auf Berechtigung geprüft wenn sie Dialogereignisse abonnieren. Dialog- \
-  ereignisbenachrichtigungen beinhalten private Anruf-/Dialogdaten, die für bösartige Zwecke verwendet werden könnten. Das Ausschalten \
-  der Authentifizierung könnte den Datenschutz dieses Systems beeinträchtigen.
+call-rate-limit.label=Call Rate Limit
 
-proxy-configuration.SIP_PORT.label=SIP Port
+call-rate-limit.SIPX_PROXY_AUTOBAN_THRESHOLD_VIOLATORS.label=Penalize Threshold Violators
+call-rate-limit.SIPX_PROXY_AUTOBAN_THRESHOLD_VIOLATORS.description=If set on true the IPs identified as threshold violators \
+are automatically added on the black list
 
-proxy-configuration.TLS_SIP_PORT.label=TLS SIP Port
+call-rate-limit.SIPX_PROXY_PACKETS_PER_SECOND_THRESHOLD.label=Packets per Second
+call-rate-limit.SIPX_PROXY_PACKETS_PER_SECOND_THRESHOLD.description=Number of packets per second allowed from an IP address before \
+considering it a DoS attack. Every time this threshold is exceeded the Violation Rate value associated with this IP is incremented.
+
+call-rate-limit.SIPX_PROXY_THRESHOLD_VIOLATION_RATE.label=Violation Rate
+call-rate-limit.SIPX_PROXY_THRESHOLD_VIOLATION_RATE.description=When this threshold is exceeded the IP address is added on the black list.
+
+call-rate-limit.SIPX_PROXY_BAN_LIFETIME.label=Penalty Period
+call-rate-limit.SIPX_PROXY_BAN_LIFETIME.description=Length of time (in milliseconds) that rate violators will be penalized.
+
+call-rate-limit.SIPX_PROXY_WHITE_LIST.label=White List
+call-rate-limit.SIPX_PROXY_WHITE_LIST.description=List of trusted IPs (comma separated values of IP addresses or subnet) that will be never added on the black list.
+
+call-rate-limit.SIPX_PROXY_BLACK_LIST.label=Black List
+call-rate-limit.SIPX_PROXY_BLACK_LIST.description=List of untrusted IPs (comma separated values of IP addresses or subnet) considered DoS Attackers.
+
+alert-info.label=Alert-Info
+alert-info.description=The Alert-Info header field can trigger alternate ringer sounds on many \
+telephones, it is used to mark external phonecalls as such and trigger a different ringer sound if the phone \
+is configured for it.
+
+alert-info.EXTERNAL_ENABLED.label=Enable for external calls
+
+alert-info.EXTERNAL.label=External call field value
+alert-info.EXTERNAL.description=The default value was chosen to satisfy the requirements of Snom \
+and Polycom phones and RFC 3261.
+
+alert-info.INTERNAL_ENABLED.label=Enable for internal calls
+
+alert-info.INTERNAL.label=Internal call field value
+alert-info.INTERNAL.description=The default value was chosen to satisfy the requirements of Snom \
+and Polycom phones and RFC 3261.
+
+alert-info.ON_EXISTING.label=When the field already exists:
+alert-info.ON_EXISTING.description=Phones can be configured to send their own Alert-Info field or other redundant proxies could already have inserted the field.
+
+type.replaceOrKeep.0=Leave it as it is
+type.replaceOrKeep.1=Replace it
+
+proxy-configuration.SIPX_PROXY_LOG_LEVEL.label=Log Level
+proxy-configuration.SIPX_PROXY_TCP_PORT.label=TCP Port
+proxy-configuration.SIPX_PROXY_TCP_PORT.description=
+proxy-configuration.SIPX_PROXY_UDP_PORT.label=UDP Port
+proxy-configuration.SIPX_PROXY_UDP_PORT.description=
+proxy-configuration.SIPX_PROXY_TLS_PORT.label=TLS Port
+proxy-configuration.SIPX_PROXY_TLS_PORT.description=
+proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.label=Authenticate Algorithm
+proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.description=The algorithm used in authentication
+proxy-configuration.SIPX_PROXY_MAX_FORWARDS.label=Maximum Forwards
+proxy-configuration.SIPX_PROXY_MAX_FORWARDS.description=(Max-Forwards header field)Maximum number of hops a request can transit on the way to its destination.
+proxy-configuration.SIPX_PROXY_STALE_TCP_TIMEOUT.label=Stale TCP Timeout
+proxy-configuration.SIPX_PROXY_STALE_TCP_TIMEOUT.description=
+proxy-configuration.SIPX_PROXY_CALL_STATE.label=Call State
+proxy-configuration.SIPX_PROXY_CALL_STATE.description=
+proxy-configuration.SIPX_PROXY_LOG_CONSOLE.label=Log Console
+proxy-configuration.SIPX_PROXY_LOG_CONSOLE.description=
+
+subscriptionauth.label=Subscription Authentication
+subscriptionauth.PACKAGES_REQUIRING_AUTHENTICATION.label=Packages Requiring Authentication
+subscriptionauth.PACKAGES_REQUIRING_AUTHENTICATION.description=
+subscriptionauth.TARGETS_EXEMPTED_FROM_AUTHENTICATION.label=Targets Exempted From Authentication
+subscriptionauth.TARGETS_EXEMPTED_FROM_AUTHENTICATION.description=
+
+msftxchghack.label=Microsoft Exchange Hack
+msftxchghack.USERAGENT.label=User Agent
+msftxchghack.USERAGENT.description=
+msftxchghack.EXCHANGE_SERVER_FQDN.label=Trusted Microsoft Exchange Server
+msftxchghack.EXCHANGE_SERVER_FQDN.description=Fully Qualified Domain Name of Trusted Microsoft Exchange Server
+msftxchghack.ADDITIONAL_EXCHANGE_SERVER_FQDN.label=Additional Trusted Microsoft Exchange Server
+msftxchghack.ADDITIONAL_EXCHANGE_SERVER_FQDN.description=Fully Qualified Domain Name of Additional Trusted Microsoft Exchange Server
+
+authrules.label=Authentication Rules
+authrules.IDENTITY_VALIDITY_SECONDS.label=Identity Validity
+authrules.IDENTITY_VALIDITY_SECONDS.description=
+
